# fintualist-arriendo

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
fintualist/: escenarios.py  sensibilidad.py
test/: test_escenarios.py
tests/: test_sensibilidad.py
