[tool.poetry]
name = "fintualist"
version = "0.1.0"
description = "Análisis financiero del costo relativo de comprar vs arrendar"
authors = ["Santiago A. <sarmstrong@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
numpy-financial = "^1.0.0"
plotly = "^6.0.1"
pydantic = "^2.11.4"
pandas = "^2.2.3"
scipy = "^1.15.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
autopep8 = "^1.5.4"
docformatter = "^1.4"
pylint = "^2.6.0"
flake8 = "3.8.4"
isort = "^5.7.0"
bandit = "1.7.0"
black = "22.3.0"
pre-commit = "^2.19.0"
notebook = "<7"
matplotlib = "^3.8.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
